<resources>
    <string name="app_name">NASADay</string>
    <string name="login">Login</string>
    <string name="enter_user_name">Enter user name</string>
    <string name="enter_pass">Enter password </string>
    <string name="toast_message">Log in successful! </string>
    <string name="snackbar_message">Registered successfully! </string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="search">Search</string>
    <string name="date_picker">Date picker</string>
    <string name="feeling_lucky">Feeling lucky</string>
    <string name="go_back_to_main_page">Go back to main page</string>
    <string name="sign_out">Sign out</string>
    <string name="click_for_help">Help</string>
    <string name="contact_me">Contact me</string>
    <string name="nasa_photo_of_the_day">Nasa Photo of the Day</string>
    <string name="version_2">Version 1.2.0</string>
    <string name="version_3">Version 1.3.0-b</string>
    <string name="beta">Beta</string>
    <string name="favorite">Save to favorites</string>
</resources>
