<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/item1"
        android:orderInCategory="50"
        android:icon="@drawable/calendar"
        app:showAsAction="always"
        android:title="@string/date_picker" />    <!-- This uses showAsAction=always, so look at icon= parameter -->


    <item android:id="@+id/item2"
        android:icon="@drawable/rocket"
        android:orderInCategory="75"
        app:showAsAction="always"
        android:title="@string/feeling_lucky"/>

    <item android:id="@+id/item3"
        android:title="@string/go_back_to_main_page"
        android:icon="@drawable/login"
        android:orderInCategory="100"
        app:showAsAction="always" />

    <item android:id="@+id/item4"
        android:title="@string/favorite"
        android:icon="@drawable/favorite"
        android:orderInCategory="100"
        app:showAsAction="always" />

    <item android:id="@+id/help_item"
        android:title="@string/click_for_help"
        app:showAsAction="never"
        android:orderInCategory="125"/>

    <item android:id="@+id/contact_me"
        android:title="@string/contact_me"
        app:showAsAction="never"
        android:orderInCategory="150"/>

    <item android:id="@+id/sign_out"
        android:title="@string/sign_out"
        app:showAsAction="never"
        android:orderInCategory="175"/><!-- This uses showAsAction=never, so look at title= parameter -->

</menu>